<resources>
    <string name="app_name">UniSocial</string>
    <string name="string_posts">posts</string>
    <string name="string_followers">followers</string>
    <string name="string_following">following</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>


    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_post_fragment">View Post</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="string_login">Log in</string>
    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="string_forgot_password">Forgot password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to ImageFilters -->
    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>

    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>


    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_next">NEXT</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Strings related to share -->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="open_camera">Open Camera</string>
    <string name="next">NEXT</string>
    <string name="share">SHARE</string>

    <!-- Firebase database fields -->
    <string name = "dbname_user_account_settings">user_account_settings</string>
    <string name = "dbname_photos">photos</string>
    <string name = "dbname_user_photos">user_photos</string>
    <string name = "dbname_user">users</string>
    <string name = "dbname_following">following</string>
    <string name = "dbname_followers">followers</string>
    <string name = "field_username">username</string>

    <!-- Photo types -->
    <string name = "new_photo">new_photo</string>
    <string name = "profile_photo">profile_photo</string>

    <!-- Intent extras -->
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_name">Name</string>
    <string name="string_register">Sign Up</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="string_email">Email</string>

    <string name="field_user_id">user_id</string>
    <string name="field_email">email</string>
    <string name="field_likes">likes</string>
    <string name="field_comments">comments</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_display_name">display_name</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>


    <string name="view_comments_fragment">View Comments</string>


    <string name="field_photo_path">image_path</string>
    <string name="search_user">Search User</string>


    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>

    <!-- activity names -->
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="intent_user">intent user</string>
    <string name="view_profile_fragment">ViewProfile</string>


    <!-- dialog names -->
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>

    <string name="activity_number">activity_number</string>
    <string name="my_activity">YOU</string>
    <string name="follow_activity">FOLLOWING</string>

</resources>
