<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text11"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@+id/text11"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text12"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@+id/text12"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/text13"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@+id/text13"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text21"
                android:layout_width="50dp"
                android:layout_height="10dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/string_posts"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/text22"
                android:layout_width="50dp"
                android:layout_height="10dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/string_followers"
                android:gravity="center"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/text23"
                android:layout_width="50dp"
                android:layout_height="10dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/string_following"
                android:gravity="center"
                android:textSize="10sp" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>